
enum PublickeyAlgorithm {
	CURVE25519 = 1;
	ED25519 = 2;
}

message Signed {
	required bytes message = 1;
	repeated bytes key_ids = 3; // optional in Entity
	repeated bytes sigs = 4;
}

message PublicKey {
	required uint32 usage = 1; // bitwise or of Usage enums
	repeated uint64 authorized_signature_tags = 2;
	required PublickeyAlgorithm algo = 3;
	required bytes key = 4; // structure is algorithm-specific
}

message EntityData { // usually signed
	repeated PublicKey public_keys = 1;
	optional int64 time = 2; // unix "epoch" format
	optional int64 lifetime = 3; // in seconds
}


	// optional bytes proof_created_before = 4;
	// optional bytes proof_created_after = 5;
	// optional int64 selfreported_name = 6;
